kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    myapp: homework
spec:
  replicas: 3
  selector: 
    matchLabels:
      myapp: homework
  template:
    metadata:
      labels:
        myapp: homework
    spec:
      containers:
        - name: web-server
          image: python:3.11-alpine
          command: ["sh", "-c", "python3 -m http.server 8000 --directory /homework"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: homework-pv-claim
              mountPath: /homework
            - name: app-config
              mountPath: /homework/conf
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm -f /homework/index.html
      nodeSelector:
        homework: "true"
      volumes:
        - name: homework-pv-claim
          persistentVolumeClaim:
            claimName: homework-pv-claim
        - name: app-config
          configMap:
            name: app-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
